--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Create and publish a Docker image
+name: Create and publish AEM images
 
 on:
   push:
@@ -12,13 +12,16 @@ env:
 
 jobs:
   build-and-push-image:
-    name: Build and push image
+    name: Build and push AEM image
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
       attestations: write
       id-token: write
+    strategy:
+      matrix:
+        runmode: ["author", "publish"]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -44,20 +47,20 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Extract metadata (tags, labels) for Docker
+      - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v3
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-      - name: Build and push Docker image
+      - name: Build and push docker image
         id: push
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}:${{ env.AEM_SDK_VERSION }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}:${{ matrix.runmode }}-${{ env.AEM_SDK_VERSION }}
           platforms: linux/amd64
-#          platforms: linux/amd64,linux/arm64
+          # TODO: for multi platform use: linux/amd64,linux/arm64
           labels: ${{ steps.meta.outputs.labels }}
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
