--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ env:
 jobs:
   build-images:
     name: Build images
+    id: build-images
     permissions:
       contents: read
       packages: write
@@ -84,6 +85,7 @@ jobs:
       matrix:
         arch: [ arm64, amd64 ]
     runs-on: ubuntu-latest
+    needs: build-images
     steps:
       - name: Log in to the container registry
         uses: docker/login-action@v3
