--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
         with:
           images: ${{ env.registry }}/${{ github.repository }}
       - name: Build and push docker image
-        id: build-push-image
+        id: push
         uses: docker/build-push-action@v3
         with:
           context: .
@@ -66,13 +66,13 @@ jobs:
           build-args: |
             RUNMODE=${{ matrix.runmode }}
             PORT=${{ matrix.runmode == 'author' && '4502' || '4503' }}
-#      - name: Generate artifact attestation
-#        if: github.ref == 'refs/heads/main'
-#        uses: actions/attest-build-provenance@v1
-#        with:
-#          subject-name: ${{ env.registry }}/${{ github.repository }}
-#          subject-digest: ${{ steps.push.outputs.digest }}
-#          push-to-registry: true
+      - name: Generate artifact attestation
+        if: github.ref == 'refs/heads/main'
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-name: ${{ env.registry }}/${{ github.repository }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
 
   manifest:
     name: Create manifest
