--- a/aem/default/etc/aem.yml
+++ b/aem/default/etc/aem.yml
@@ -45,4 +45,5 @@ instance:
         - -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=[[.Env.AEM_PUBLISH_DEBUG_ADDR | default "0.0.0.0:14503" ]]
   check:
     done_threshold: 1
-    await_started: 60m
+    await_started:
+      timeout: 60m
