--- a/aem/default/etc/aem.yml
+++ b/aem/default/etc/aem.yml
@@ -32,6 +32,7 @@ instance:
         - -server
         - -Xms2048m
         - -Xmx2048m
+        - -Djava.awt.headless=true
         - -XX:+CMSClassUnloadingEnabled
         - -XX:+UseParallelGC
         - --add-opens=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED
